--- a/www/wp-content/themes/i-craft/style.css
+++ b/www/wp-content/themes/i-craft/style.css
@@ -526,7 +526,7 @@ article a,
 .error404 .page-title:before {
 	-webkit-font-smoothing: antialiased;
 	display: inline-block;
-	font: normal 40px/1 Genericons;
+	font: normal 16px/1 Genericons;
 	vertical-align: text-bottom;
 }
 
@@ -4119,8 +4119,7 @@ nav.navigation .nav-links a:visited {
 .header-iconwrap {
 	display: block;
 	position:absolute;
-	right:10px;
-	width: 80px;
+	right:40px;
 }
 
 .header-icons.woocart {
@@ -4129,8 +4128,8 @@ nav.navigation .nav-links a:visited {
 
 .header-icons.woocart > a {
 	display: block;
-	padding-top: 10px;
-	padding-bottom: 0px;
+	padding-top: 8px;
+	padding-bottom: 38px;
 	line-height: 1;
 	position: relative;
 }
@@ -4151,7 +4150,7 @@ nav.navigation .nav-links a:visited {
 	display: block;
 	position: absolute;
 	right: 0px;
-	top: 50px;
+	top: 18px;
 	border: 1px solid #d26604;
 	width: 280px;
 	height: auto;
@@ -4371,14 +4370,14 @@ nav.navigation .nav-links a:visited {
 }
 
 .header-iconwrap .header-icons.woocart > a .cart-counts {
-	height: 30px;
-	width: 30px;
-	line-height: 30px;
+	height: 40px;
+	width: 40px;
+	line-height: 20px;
 	text-align: center;
 	position: absolute;
-	left: 40px;
-	top: 20%;
-	/* margin-top: 20px; */
+	left: 16px;
+	top: 50%;
+	margin-top: -20px;
 	background-color: #d26604;
 	color: #FFF;
 	border-radius: 10px;
