--- a/www/wp-content/plugins/wp-customer-reviews/wp-customer-reviews.css
+++ b/www/wp-content/plugins/wp-customer-reviews/wp-customer-reviews.css
@@ -4,13 +4,20 @@
     Example: #wpcr_respond_1 blockquote.description p { font-size:12px !important; font-weight:bold !important; }
 */
 
+.hreview {
+	border: 2px solid #4d2200;
+	
+	margin: 0;
+	border-radius: 5px;
+}
+
 .wpcr_show { display:inline; }
 .wpcr_hide { display:none; }
 .wpcr_fl { float:left; }
-.wpcr_sc { padding:0px 10px 0px 0px; }
-.wpcr_rname { padding:0px 0px 0px 0px; line-height:20px; }
+.wpcr_sc { padding:10px 10px 10px 10px; border-top: 2px solid #4d2200; }
+.wpcr_rname { padding:10px 10px 10px 10px; line-height:20px; border: 2px solid #4d2200; border-bottom: none;}
 .wpcr_clear { clear:both; }
-.wpcr_spacing1 { padding-bottom:5px; }
+.wpcr_spacing1 { padding-bottom:-5px; }
 .wpcr_lh30 { line-height:30px; }
 .wpcr_pb5 { padding-bottom:5px; }
 .wpcr_power { padding-top:30px !important; padding-bottom:5px !important; font-size:10px !important; }
@@ -18,19 +25,19 @@
 .wpcr_status_msg div { color:#c00;font-weight:bold;padding-bottom:15px;padding-top:15px; }
 
 /* title of review */
-#wpcr_respond_1 h2.summary { padding: 5px 0 5px 0; }
-#wpcr_respond_1 h3.summary { padding: 5px 0 5px 0; }
-#wpcr_respond_1 h4.summary { padding: 5px 0 5px 0; }
-#wpcr_respond_1 h5.summary { padding: 5px 0 5px 0; }
-#wpcr_respond_1 h6.summary { padding: 5px 0 5px 0; }
+#wpcr_respond_1 h2.summary { padding: 15px 15px 15px 15px; background-color: #4d2200; color: #fff; }
+#wpcr_respond_1 h3.summary { padding: 5px 0 0px 0; background-color: #4d2200; color: #fff;}
+#wpcr_respond_1 h4.summary { padding: 5px 0 0px 0; background-color: #4d2200; color: #fff;}
+#wpcr_respond_1 h5.summary { padding: 5px 0 0px 0; background-color: #4d2200; color: #fff;}
+#wpcr_respond_1 h6.summary { padding: 5px 0 0px 0; background-color: #4d2200; color: #fff;}
 
 /* review text */
-#wpcr_respond_1 blockquote.description { font-size:1em; font-weight:bold; }
+#wpcr_respond_1 blockquote.description { font-size:1.5em; font-weight:bold; border-top: 2px solid #4d2200; padding:20px 20px 20px 20px; margin: 0;}
 #wpcr_respond_1 blockquote.description p { font-size:1em; font-weight:bold; display:inline !important; }
 #wpcr_respond_1 p.response { font-size:1em; font-weight:bold; font-style:italic; }
 
 /* hcard */
-#wpcr_respond_1 .vcard { font-size:16px !important; padding-bottom:5px; line-height:11px !important; }
+#wpcr_respond_1 .vcard { font-size:26px !important; padding-bottom:5px; line-height:11px !important; }
 #wpcr_hcard_h { display:none; }
 #wpcr_hcard_s { display:block; }
 
@@ -148,17 +155,18 @@
     text-shadow: 1px -1px 0 rgba(255, 255, 255, 0.5) !important; 
 }
 
-#wpcr_commentform input  { padding:0; margin:0 !important; width:200px !important;  }
-#wpcr_commentform textarea { padding:0 !important; margin:0 !important; width:400px !important; height:100px !important; }
+#wpcr_commentform input  { padding:5px 10px; margin-left:0px !important; width:180px !important;  }
+#wpcr_commentform textarea { padding:0 !important; margin:0 !important; width:300px !important; height:100px !important; }
 #wpcr_commentform small { padding:0 !important; margin:0 !important; }
-#wpcr_commentform table, #wpcr_commentform td { border:0 !important; border-style:none !important; }
+#wpcr_commentform table, #wpcr_commentform td { border:0 !important; border-style:none !important; width: 20px;}
 
 #wpcr_pagination {
     clear:both;
     padding:0px 0px 0px 0px;
     position:relative;
-    font-size:11px;
-    line-height:13px;
+    font-size:18px;
+	font-weight: normal;
+    line-height:18px;
 }
 
 #wpcr_pagination_page {
@@ -172,20 +180,20 @@
     display:block;
     float:left;
     margin: 2px 2px 2px 0;
-    padding:6px 9px 5px 9px;
+    padding:16px 19px 15px 19px;
     text-decoration:none;
     width:auto;
     color:#fff;
-    background: #555;
+    background: #d26604;
 }
 
 #wpcr_pagination a:hover{
     color:#fff;
-    background: #3279BB;
+    background: #4d2200;
 }
 
 #wpcr_pagination .wpcr_current{
-    padding:6px 9px 5px 9px;
-    background: #3279BB;
-    color:#fff;
+    padding:16px 19px 15px 19px;
+    background: #d26604;
+    color:#a54e00;
 }
