--- a/www/wp-content/themes/i-craft/css/nx-woo.css
+++ b/www/wp-content/themes/i-craft/css/nx-woo.css
@@ -316,7 +316,7 @@ p.demo_store{
 	width:100%;
 	height:auto;
 	border: 2px solid #4d2200;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
 .woocommerce #content div.product div.images div.thumbnails,
@@ -732,10 +732,22 @@ p.demo_store{
 	height:auto;
 	display:block;
 	margin:0 0 8px;
+	border: 2px solid #4d2200;
+	border-radius: 3px;
+	
 }
 
 .woocommerce ul.products li.product a:hover img,
 .woocommerce-page ul.products li.product a:hover img{
+	
+	outline: 10px solid rgba(77, 34, 0, 0.2);
+    outline-offset: -10px;
+	border: none;
+	
+	
+	transition: all 1s;
+	
+	
 }
 
 .woocommerce ul.products li.product strong,
@@ -801,9 +813,10 @@ p.demo_store{
 	white-space:nowrap;
 	padding:0;
 	clear:both;
-	border:1px solid #4d2200;
+	border:2px solid #4d2200;
 	border-right:0;
-	margin:1px;
+	margin:0px;
+	border-radius: 3px;
 	
 }
 
@@ -811,7 +824,7 @@ p.demo_store{
 .woocommerce nav.woocommerce-pagination ul li,
 .woocommerce-page #content nav.woocommerce-pagination ul li,
 .woocommerce-page nav.woocommerce-pagination ul li{
-	border-right:1px solid #4d2200;
+	border-right:2px solid #4d2200;
 	padding:0;
 	margin:0;
 	float:left;
@@ -873,7 +886,7 @@ a.button {
 	display: inline-block;
 	width: 100%;
 	margin: 10px 0;
-	
+	border-radius: 3px;
 	line-height: 16px;
 	cursor:pointer;
 	position:relative;
@@ -965,6 +978,7 @@ a.button {
 	color: #FFF;
 	text-decoration:none;
 	box-shadow: none;
+	border-radius: 3px;
 }
 
 .cart_totals  > .wc-proceed-to-checkout > a.checkout-button {
@@ -1112,11 +1126,12 @@ a.button {
 .woocommerce .quantity input.qty,
 .woocommerce-page #content .quantity input.qty,
 .woocommerce-page .quantity input.qty{
-	height:29px;
-	line-height: 31px;
+	height:36px;
+	line-height: 36px;
 	padding:0;
 	margin:0;
 	text-align:center;
+	font-size: 18px;
 }
 
 .woocommerce #content .quantity input[type=number],
@@ -1780,7 +1795,9 @@ a.button {
 .woocommerce table.cart img,
 .woocommerce-page #content table.cart img,
 .woocommerce-page table.cart img{
-	width:32px;
+	width:56px;
+	border:1px solid #4d2200;
+	border-radius: 3px;
 }
 
 .woocommerce #content table.cart td,
@@ -1888,6 +1905,14 @@ a.button {
 	font-weight:700;
 }
 
+.woocommerce ul.cart_list li a:hover,
+.woocommerce ul.product_list_widget li a:hover,
+.woocommerce-page ul.cart_list li a:hover,
+.woocommerce-page ul.product_list_widget li a:hover{
+	transform: scale(1.01,1.01);
+	transition:  all 0.2s ease-in-out;
+}
+
 .woocommerce ul.cart_list li img,
 .woocommerce ul.product_list_widget li img,
 .woocommerce-page ul.cart_list li img,
@@ -1896,6 +1921,22 @@ a.button {
 	margin-left:4px;
 	width:44px;
 	height:auto;
+	border:1px solid #4d2200;
+	border-radius: 3px;
+}
+
+.woocommerce ul.cart_list li img:hover,
+.woocommerce ul.product_list_widget li img:hover,
+.woocommerce-page ul.cart_list li img:hover,
+.woocommerce-page ul.product_list_widget li img:hover{
+	width:50px;
+	height:auto;
+	border:none;
+	outline: 3px solid rgba(77, 34, 0, 0.2);
+    outline-offset: -3px;
+    border: none;
+    transition: all 0.8s;
+	
 }
 
 .woocommerce ul.cart_list li dl,
@@ -2045,6 +2086,11 @@ a.button {
 	padding:0;
 }
 
+.woocommerce tr.order-total {
+	font-size: 18px;
+
+}
+
 
 .woocommerce .cart-collaterals .cart_totals table tr:first-child td,
 .woocommerce .cart-collaterals .cart_totals table tr:first-child th,
@@ -2156,7 +2202,84 @@ a.button {
 	margin:-2px 8px 0 0;
 	text-align:center;
 	vertical-align:middle;
+	
+	 cursor: pointer;
 }
+
+.woocommerce form .form-row .input-checkbox:not(checked),
+.woocommerce-page form .form-row .input-checkbox:not(checked) {
+	position: absolute;
+	opacity: 0; /* Прячем оригинальный чекбокс. */
+}
+
+.woocommerce form .form-row .input-checkbox:not(checked) + label,
+.woocommerce-page form .form-row .input-checkbox:not(checked) + label {
+	position: relative; /* будем позиционировать псевдочекбокс относительно label */
+	padding: 0 10px 0 40px; /* оставляем слева от label место под псевдочекбокс */
+}
+
+/* Оформление первой части чекбокса в выключенном состоянии (фон). */
+.woocommerce form .form-row .input-checkbox:not(checked) + label:before,
+.woocommerce-page form .form-row .input-checkbox:not(checked) + label:before {
+	content: '';
+	position: absolute;
+	top: -4px;
+	left: 0;
+	width: 25px;
+	height: 25px;
+	border-radius: 5px;
+	background: none;
+	border: 2px solid #4d2200;
+	box-shadow: inset 1px 1px 1px rgba(0,0,0,.2);
+}
+
+/* Оформление второй части чекбокса в выключенном состоянии (переключатель). */
+.woocommerce form .form-row .input-checkbox:not(checked) + label:after,
+.woocommerce-page form .form-row .input-checkbox:not(checked) + label:after {
+  display: block;
+  content: 'L';
+  position: absolute;
+  top: 1px;
+  left: 4px;
+  width: 0px;
+  height: 0px;
+  opacity: 0;
+  
+  
+}
+
+/* Меняем фон чекбокса, когда он включен. */
+.woocommerce form .form-row .input-checkbox:checked + label:before,
+ .woocommerce-page form .form-row .input-checkbox:checked + label:before{
+	
+	transition: all 0.5s;
+	background: #d26604;
+}
+
+/* Сдвигаем переключатель чекбокса, когда он включен. */
+.woocommerce form .form-row .input-checkbox:checked + label:after,
+ .woocommerce-page form .form-row .input-checkbox:checked + label:after {
+  display: block;
+  content: 'L';
+  font-size: 50px;
+  font-weight: bold;
+  position: absolute;
+  top: -16px;
+  left: 17px;
+  width: 20px;
+  height: 19px;
+  border-radius: 5px;
+  background: none;
+  /* box-shadow: 0 2px 5px rgba(0,0,0,.3); */
+  opacity: 1;
+  filter: FlipH;
+  transform: scale(1, -1) rotate(135deg);
+  transition: all 0.5s; /* анимация, чтобы чекбокс переключался плавно */
+  
+}
+
+
+
 
 .woocommerce form .form-row input.input-text,
 .woocommerce form .form-row textarea,
